fix: fixes video overlap issue on hover

--- a/src/components/masonry-grid/style.scss
+++ b/src/components/masonry-grid/style.scss
@@ -23,7 +23,7 @@
       transition: 0.3s ease-out all;
       height: 100%;
 
-      video {
+      .video-wrapper {
         width: 100%;
         height: 100%;
         border-radius: 10px;
